# draftwell-editor

./: .gitignore  BUILDING.md  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
aur/: .SRCINFO  PKGBUILD
docs/: customization.md
docs/architecture/: 00-product-scope.md  01-system-architecture.md  02-frontend-architecture.md  03-editor-and-rendering.md  04-data-and-sync.md  05-api-contract.md  06-security-and-privacy.md  07-platform-and-operations.md  08-testing-and-quality.md  09-delivery-roadmap.md  10-desktop-file-editor.md  README.md
flatpak/: com.draftwell.editor.desktop  com.draftwell.editor.metainfo.xml  com.draftwell.editor.yml
src/: App.test.tsx  App.tsx  CustomizationPanel.tsx  OnboardingTutorial.tsx  customization.test.ts  customization.ts  desktop.ts  external-modules.d.ts  main.tsx  markdown-it-task-lists.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: conversion.ts  markdown.test.ts  markdown.ts  onboarding.ts  preferences.test.ts  preferences.ts  scrollSync.test.ts  scrollSync.ts
